# NLP__Unsupervised__sent2vec

./: CMakeLists.txt  corpus.txt  get_sentence_embeddings_from_pre-trained_models.ipynb  run.sh  url_corpus_sample.txt  user.txt  wikiTokenize.py
src/: fasttext.cc  fasttext.h  main.cc  utils.cc  utils.h
